Add implementation for whole backend for cards, clients and endpoints with kafka