@@ -1,5 +1,7 @@
-package com.RBA_assignment.RBA_assignment.configuration;
+package com.RBA_assignment.RBA_assignment.handlers;
 
+import com.RBA_assignment.RBA_assignment.utils.ApiResponseMsg;
+import jakarta.persistence.EntityExistsException;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.FetchNotFoundException;
@@ -10,20 +12,18 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+
     // Custom fetch not found
     @ExceptionHandler(FetchNotFoundException.class)
     public ResponseEntity<ApiResponseMsg> handleNotFound(FetchNotFoundException ex) {
         log.warn("Not found: {}", ex.getMessage());
         ApiResponseMsg error = new ApiResponseMsg(
                 HttpStatus.NOT_FOUND.value(),
-                "Not Found",
-                ex.getEntityName(),
-                List.of(ex.getMessage())
+                "Not Found - " + ex.getEntityName()
         );
         return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
     }
@@ -35,13 +35,10 @@ public class GlobalExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(err -> err.getField() + ": " + err.getDefaultMessage())
-                .collect(Collectors.toList());
-
+                .toList();
         ApiResponseMsg error = new ApiResponseMsg(
                 HttpStatus.BAD_REQUEST.value(),
-                "Validation Failed",
-                "One or more fields failed validation.",
-                errors
+                "Validation Failed - " + "One or more fields failed validation." + errors
         );
         return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
     }
@@ -52,15 +49,22 @@ public class GlobalExceptionHandler {
         List<String> violations = ex.getConstraintViolations()
                 .stream()
                 .map(v -> v.getPropertyPath() + ": " + v.getMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         ApiResponseMsg error = new ApiResponseMsg(
                 HttpStatus.BAD_REQUEST.value(),
-                "Invalid Request Parameters",
-                "Validation failed for request parameters.",
-                violations
+                "Invalid Request Parameters - " + "Validation failed for request parameters." + violations
         );
         return new ResponseEntity<>(error, HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(EntityExistsException.class)
+    public ResponseEntity<ApiResponseMsg> handleEntityExistsException(EntityExistsException ex) {
+        ApiResponseMsg error = new ApiResponseMsg(
+                HttpStatus.CONFLICT.value(),
+                "Entity already exists - " + ex.getMessage()
+        );
+        return new ResponseEntity<>(error, HttpStatus.CONFLICT);
     }
 
     // Catch-all fallback
@@ -69,9 +73,7 @@ public class GlobalExceptionHandler {
         log.error("Unhandled error", ex);
         ApiResponseMsg error = new ApiResponseMsg(
                 HttpStatus.INTERNAL_SERVER_ERROR.value(),
-                "Internal Server Error",
-                "Something went wrong. Please try again later.",
-                null
+                "Internal Server Error - " + "Something went wrong. Please try again later."
         );
         return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
     }
